# flappybird

./: .gitignore  CMakeLists.txt  Makefile  README.md  flappy.cpp  flappy.hpp  main.cpp
